--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>.KodeKraft</h1>
         </div>
     <div class="drop-down-nav">
-        <a>About</a>
-        <a>Services</a>
-        <a>Contact</a>
+        <a href="https://en.wikipedia.org/wiki/Lint_(material)" target="_blank">About</a>
+        <a href="http://www.theatomicpriesthoodproject.org" target="_blank">Services</a>
+        <a href="https://www.louvre.fr/en/contact-us" target="_blank">Contact</a>
     </div>
     </div>
 
@@ -72,6 +72,17 @@
     </section>
 
     <section class="call-to-action">
+
+        <div class="call-to-action-card">
+            <div class="line-height">
+                <div><h4 class="sub-heading-call-1">Call to action, it's time!</h4></div>
+                <div class="sub-para-call-1"><p>Sign up to our product by clicking that button over there.</p></div>
+            </div>
+            <div>
+                <div id="bottom-button" class="button-2"><a>Sign up</a></div>
+            </div>
+        </div>
+
     </section>
 </body>
 <footer class="footer">
