--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="refresh" content="15">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css"
+    <title>KodeKraft</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="nav-container">
@@ -14,9 +15,9 @@
     <h1>.KodeKraft</h1>
         </div>
     <div class="drop-down-nav">
-        <a href="https://en.wikipedia.org/wiki/Lint_(material)" target="_blank">About</a>
-        <a href="http://www.theatomicpriesthoodproject.org" target="_blank">Services</a>
-        <a href="https://www.louvre.fr/en/contact-us" target="_blank">Contact</a>
+        <a href="https://en.wikipedia.org/wiki/Lint_(material)" target="_blank" id="about">About</a>
+        <a href="http://www.theatomicpriesthoodproject.org" target="_blank" id="services">Services</a>
+        <a href="https://www.louvre.fr/en/contact-us" target="_blank" id="contact">Contact</a>
     </div>
     </div>
 
@@ -24,7 +25,7 @@
         <div class="card-1">
         <div class="sub-heading-item-1"><h2>This is .KodeKraft</h2></div>
         <div class="para-item-1"><p>.KodeKraft provides users with projects meant to define a browser. The website .KodeKraft was created using VS Code in HTML & CSS.</p></div>
-        <div class="sign-up-item"><a href="#">Sign Up</a></div>
+        <div class="sign-up-item" id="sign-up-1"><a href="https://freakbait.com">Sign Up</a></div>
         </div>
 
         <div class="card-2">
@@ -41,27 +42,27 @@
     <section class="top-4-items">
         
         <div>
-            <div class="profile-image-1"></div>
+            <a href="https://www.youtube.com/watch?v=OhzBo0dZNpY&ab_channel=Eternalised"><div class="profile-image-1"></div></a>
             <div class="description-item-1">Carl Jung</div>
             <div class="card-para"><p>This is Carl Jung, he is the founder of analytical psychology who wrote work discussing man's 'Collective Unconsious' as well as defining the psychological term 'Archetype' as well as man's 'Shadow'.</p></div>
         </div>
 
         <div>
-            <div class="profile-image-2"></div>
+            <a href="https://www.youtube.com/watch?v=4288NRq1vVc&ab_channel=AcademyofIdeas"><div class="profile-image-2"></div></a>
             <div class="description-item-2">Joseph Campbell</div>
-            <div class="card-para"><p>This is Carl Jung, he is the founder of analytical psychology who wrote work discussing man's 'Collective Unconsious' as well as defining the psychological term 'Archetype' as well as man's 'Shadow'.</p></div>
+            <div class="card-para"><p>Joseph Campbell is the creator of the Heroes Journey, the main influence on classic movie trilogy Star Wars as well as single-handedly creating a comprehensive guide to comparative mythology across his works and life-time.</p></div>
         </div>
 
         <div>
-            <div class="profile-image-3"></div>
+            <a href="https://www.youtube.com/watch?v=vZJ9GrLGVPA&ab_channel=MonkLife"><div class="profile-image-3"></div></a>
             <div class="description-item-3">Alan Watts</div>
-            <div class="card-para"><p>This is Carl Jung, he is the founder of analytical psychology who wrote work discussing man's 'Collective Unconsious' as well as defining the psychological term 'Archetype' as well as man's 'Shadow'.</p></div>
+            <div class="card-para"><p>Alan Watts is well known for bringing teachings of Eastern Buddhism, Zen and Hinduism to the West, he has written several books and done countless lectures on the subject changing the Western narrative to a more rounded view on cosmology and religion.</p></div>
         </div>
 
         <div>
-            <div class="profile-image-4"></div>
+            <a href="https://www.youtube.com/watch?v=ME9xBGvhWuw&ab_channel=EsotericTower"><div class="profile-image-4"></div></a>
             <div class="description-item-4">Manly P. Hall</div>
-            <div class="card-para"><p>This is Carl Jung, he is the founder of analytical psychology who wrote work discussing man's 'Collective Unconsious' as well as defining the psychological term 'Archetype' as well as man's 'Shadow'.</p></div>
+            <div class="card-para"><p>Manly P Hall was a member of the Hermetic Order of the Golden Dawn as well as the founder of one of the largest esoteric antiquarian book collections in America called the Philsophical Society. Hall wrote varios esoteric books including the famous, Secret Teachings of All Ages.</p></div>
         </div>
     </section>
 
@@ -79,7 +80,7 @@
                 <div class="sub-para-call-1"><p>Sign up to our product by clicking that button over there.</p></div>
             </div>
             <div>
-                <div id="bottom-button" class="button-2"><a>Sign up</a></div>
+                <div id="bottom-button" class="button-2"><a href="https://freakbait.com">Sign up</a></div>
             </div>
         </div>
 
@@ -87,7 +88,7 @@
 </body>
 <footer class="footer">
     <div class="footer-text">
-    <p><em>Copyright KodeKraft 2023.</em></p>
+    <p id="footer"><em>Copyright <a href="https://github.com/XulQu">KodeKraft</a> 2023.</em></p>
     </div>
 
 </footer>
